fix layout issues

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -115,3 +115,17 @@ input:-webkit-autofill:focus {
 .no-scrollbar::-webkit-scrollbar {
     display: none;
 }
+
+.custom-scrollbar::-webkit-scrollbar {
+  width: 6px;
+  height: 10px;
+}
+
+.custom-scrollbar::-webkit-scrollbar-track {
+  background: transparent;
+}
+
+.custom-scrollbar::-webkit-scrollbar-thumb {
+  background-color: var(--muted-foreground);
+  border-radius: 9999px;
+}
